--- a/resources/css/MXSwitch/MXSwitch.scss
+++ b/resources/css/MXSwitch/MXSwitch.scss
@@ -365,6 +365,14 @@
         line-height: 2.2;
         font-size: 10px;
         white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+
+        > div {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            right: 0;
+        }
 
         @include media-breakpoint-up(sm) {
             line-height: 1.8;
